--- a/estilos/estilosRegistro.css
+++ b/estilos/estilosRegistro.css
@@ -54,17 +54,29 @@ select, input, textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-button {
+button[type="submit"] {
+    display: block;
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: rgb(52, 51, 51);
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin: 0;
+    margin: 10px auto;
+    margin-bottom: 0;
 }
-button:hover {
-    background-color: #0056b3;
+button[type="submit"]:hover {
+    background-color: rgb(34, 33, 33);
+}
+button[type="button"]{
+    padding: 10px 20px;
+    background-color: rgb(52, 51, 51);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px auto;
+    margin-bottom: 0;
 }
 .hidden {
     display: none;
@@ -76,4 +88,41 @@ button:hover {
     text-align: center;
     color: antiquewhite;
     padding-top: 30px;
+}
+.error-message {
+    color: red;
+    font-size: 0.7em;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+small {
+    font-size: 0.7em;
+}
+ul {
+    list-style-type: none;
+    padding-left: 10px;
+}
+li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 3px;
+    border-bottom: 1px solid black;
+}
+p {
+    flex-grow: 1;
+    margin: 0;
+    padding: 5px 0;
+}
+.btn-per{
+    display: block;
+    padding: 10px 20px;
+    background-color: transparent;
+    color: red;
+    border: 1px solid red;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px auto;
+    margin-bottom: 0;
 }
