--- a/estilos/principalestilos.css
+++ b/estilos/principalestilos.css
@@ -1,3 +1,8 @@
+body {
+    font-family: "Noto Serif Ahom", serif;
+    margin: 0;
+    /* padding: 0; */
+}
    /* Estilos para el Ranking y los chefs */
    .ranking {
     text-align: center;
@@ -51,6 +56,9 @@
 
 /* Estilos para la publicidad */
 .publicidad, .publicacion {
+    display: flex;
+    flex-direction: column;
+    height: 600px;
     width: 100%;
     max-width: 800px;
     margin: 40px auto;
@@ -61,8 +69,8 @@
 }
 
 .publicidad img, .publicacion img {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -88,19 +96,28 @@
 .carousel {
     position: relative;
     width: 100%;
-    overflow: hidden; /* Asegura que solo se vea una imagen a la vez */
+    overflow: hidden;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: hidden;
 }
 
 .carousel-images {
     display: flex;
+    overflow: hidden;
     transition: transform 0.5s ease-in-out;
-    width: 300%; /* Ancho total del contenedor para 3 imágenes */
+    width: 300%;
+    height: 100%;
+    flex-grow: 1;
 }
 
-.carousel img {
-    width: 33.33%; /* Cada imagen ocupa un 33.33% del contenedor */
-    height: 500px;
-    object-fit: cover;
+.carousel-images img {
+    width: 33.3337%; /* Cada imagen ocupa un 33.33% del contenedor */
+    height: 100%;
+    object-fit: fill;
+
 }
 
 /* Botones de navegación */
@@ -164,4 +181,139 @@
 .comentario-item {
     padding: 10px;
     border-bottom: 1px solid #ccc;
+}
+
+.header {
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 10px 50px; */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    box-shadow: none;
+    padding: 20px;
+    transition: box-shadow 0.3s ease-in-out;
+}
+.header.scrolled {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.menu {
+    order: -1;
+    font-size: 20px;
+    color: blue;
+    cursor: pointer;
+}
+.title-container {
+    text-align: center;
+    flex-grow: 1;
+}
+.titulo {
+    font-size: 60px;
+    margin: 0; 
+    font-family: "Noto Serif Ahom", serif;
+}
+.subtitulo {
+    font-size: 20px;
+    margin: 0; 
+    color: gray; 
+    font-family: "Noto Serif Ahom", serif;
+}
+.avatar {
+    /* Añadido para asegurar que la imagen esté a la derecha */
+    display: flex;
+    align-items: center;
+    margin-right: 70px;
+    flex-direction: column;
+    text-decoration: none;
+    transition: text-shadow 0.3s ease;
+}
+a.avatar:focus, 
+a.avatar:active {
+    text-decoration: none;
+    outline: none;
+}
+a:hover {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra al pasar el cursor */
+}
+.avatar img {
+    height: 80px;
+    width: 80px; /* Añadido para evitar problemas de dimensionamiento */
+    max-width: 80px;
+    border-radius: 50%;
+    /* border: 1px solid green; */
+    object-fit: cover; /* Asegura que la imagen se ajuste correctamente */
+}
+p#userName {
+    /* border: 1px solid green; */
+    margin: 0;
+    text-decoration: none;
+    color: black;
+    font-family: "Noto Serif Ahom", serif;
+    font-weight: bolder;
+    letter-spacing: 2px;
+}
+.menu-window {
+    position: fixed;
+    top: -50%;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: rgba(255, 255, 255, 0.95);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: top 0.3s ease-in-out;
+    z-index: 2000;
+}
+.menu-window.open {
+    top: 0;
+}
+.menu-window a {
+    font-size: 20px;
+    margin: 10px 0;
+    text-decoration: none;
+    color: black;
+    font-family: "Noto Serif Ahom", serif;
+}
+.menu-window a:hover {
+    text-decoration: underline;
+}
+.close-menu {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    font-size: 30px;
+    cursor: pointer;
+    color: black;
+}
+.content {
+    margin-top: 150px;
+}
+.border_ {
+    border: 1px solid green;
+}
+
+div.containerColumn{
+    display: flex;
+    flex-direction: column;
+}
+
+div.containerRow{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+img.imgPubli {
+    height: 70px; 
+    width: 70px; 
+    border-radius: 50px;
+}
+p.contenido {
+    padding: 0 10px;
 }
