--- a/estilos/principalestilos.css
+++ b/estilos/principalestilos.css
@@ -55,10 +55,10 @@ body {
 }
 
 /* Estilos para la publicidad */
-.publicidad, .publicacion {
+.publicidad{
     display: flex;
     flex-direction: column;
-    height: 600px;
+    height: 500px;
     width: 100%;
     max-width: 800px;
     margin: 40px auto;
@@ -68,7 +68,27 @@ body {
     padding: 20px;
 }
 
-.publicidad img, .publicacion img {
+.publicacion {
+    display: flex;
+    flex-direction: column;
+    max-height: 1200px;
+    width: 100%;
+    max-width: 800px;
+    margin: 40px auto;
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.publicidad img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.publicacion img {
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -102,6 +122,7 @@ body {
     flex-direction: column;
     flex: 1;
     overflow: hidden;
+    /* border: 1px solid red; */
 }
 
 .carousel-images {
@@ -111,13 +132,14 @@ body {
     width: 300%;
     height: 100%;
     flex-grow: 1;
+    /* border: 1px solid green; */
 }
 
 .carousel-images img {
-    width: 33.3337%; /* Cada imagen ocupa un 33.33% del contenedor */
+    width: 33.3337%;
     height: 100%;
-    object-fit: fill;
-
+    object-fit: cover;
+    /* border: 1px solid blue; */
 }
 
 /* Botones de navegación */
