--- a/estilos/principalestilos.css
+++ b/estilos/principalestilos.css
@@ -58,9 +58,9 @@ body {
 .publicidad{
     display: flex;
     flex-direction: column;
-    max-height: 500px;
+    /* max-height: 600px; */
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 40px auto;
     background-color: #f8f8f8;
     border: 1px solid #ccc;
@@ -71,7 +71,7 @@ body {
 .publicacion {
     display: flex;
     flex-direction: column;
-    max-height: 800px;
+    /* max-height: 1200px; */
     width: 100%;
     max-width: 800px;
     margin: 40px auto;
@@ -82,15 +82,13 @@ body {
 }
 
 .publicidad img {
-    width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
 }
 
 .publicacion img {
     width: 100%;
-    height: auto;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -117,7 +115,6 @@ body {
     position: relative;
     width: 100%;
     overflow: hidden;
-    max-height: 100%;
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -126,18 +123,15 @@ body {
 
 .carousel-images {
     display: flex;
-    overflow: hidden;
     transition: transform 0.5s ease-in-out;
     width: 300%;
     height: 100%;
-    flex-grow: 1;
-    /* border: 1px solid green; */
 }
 
 .carousel-images img {
     width: 33.3337%;
-    height: 100%;
     object-fit: cover;
+    aspect-ratio: 16/9; 
     /* border: 1px solid blue; */
 }
 
@@ -372,11 +366,11 @@ i{
     border: 1px solid #464646;
     border-radius: 5px;
 }
-
-  .rating::-webkit-outer-spin-button,
-  .rating::-webkit-inner-spin-button {
+.rating[type="number"] {
+    -moz-appearance: textfield;
+}
+.rating::-webkit-outer-spin-button,
+.rating::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
-  }
-  /* <p>Calificar</p> 
-  <input class="rating" type="number" min="0" max="5" value="0">*/
+}
