--- a/estilos/perfilestilos.css
+++ b/estilos/perfilestilos.css
@@ -761,3 +761,57 @@ h2 {
       height: 80px;
   }
 }
+.parent-div {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+.child-div {
+  width: 20%;
+  text-align: center;
+  padding: 10px;
+  padding-bottom: 0;
+  box-sizing: border-box;
+  align-items: baseline;
+}
+.last-child {
+  width: 46%;
+  display: flex;
+  text-align: center;
+  justify-content: right;
+  align-items: baseline;
+}
+.child-div p {
+  margin: 0; 
+}
+i{
+  margin: 5px;
+}
+.rating {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 17px;
+  border: 1px solid #464646;
+  border-radius: 5px;
+}
+.rating[type="number"] {
+  appearance: textfield;
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+}
+.rating::-webkit-outer-spin-button,
+.rating::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+a.Id_receta {
+  /* border: 1px solid purple; */
+  font-size: 13px;
+  color: blue;
+  padding-left: 5px;
+}
+a.Id_receta:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
