--- a/estilos/perfilestilos.css
+++ b/estilos/perfilestilos.css
@@ -352,6 +352,21 @@ body {
     cursor: pointer;
     text-align: center;
   }
+
+  .follow {
+    width: 10%;
+      padding: 10px;
+      background-color: #2f3031;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      margin-top: 15px;
+      cursor: pointer;
+  }
+
+  .follow:hover {
+    background-color: #181818;
+  }
   
   #edit-profile:hover, #logout:hover {
     background-color: #618f63;
@@ -814,4 +829,15 @@ a.Id_receta {
 a.Id_receta:hover{
   text-decoration: underline;
   cursor: pointer;
+}
+.followers-container {
+  display: flex;
+  gap: 10px; /* Espacio entre los elementos */
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+}
+
+#followers, #follows {
+  margin: 0; /* Eliminar márgenes para una alineación más precisa */
 }
